@@ -8,6 +8,7 @@ Changes since 1.3e:
  o Increase the maximum number of addresses read from a packet in evdns to 32.
  o Fix DNS unit tests so that having a DNS server with broken IPv6 support is no longer cause for aborting the unit tests.
  o Remove == operator from autogen.sh so it works on non-bash shells.
+ o bufferevent_write now uses a const source argument; report from Charles Kerr
 
 Changes since 1.3d:
  o demote most http warnings to debug messages
